--- a/cam/esp32cam/nodejs_server_esp32cam/package.json
+++ b/cam/esp32cam/nodejs_server_esp32cam/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon index.ejs",
     "startdev": "nodemon app.js --ignore './storage/' --ignore './public/' --ignore './commands/' --ignore './var/' ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,6 @@
     "ws": "^7.4.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.19"
   }
 }
